Updating atomic benchmark